# discret

./: .gitignore  COPYING  Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
benches/: bench_main.rs
examples/: simple_blocking_chat.rs  simple_chat.rs
src/: configuration.rs  cryptography.rs  database.rs  date_utils.rs  discret.rs  error.rs  errors.rs  event_service.rs  lib.rs  log_service.rs  message.rs  peer_connection_service.rs  security.rs  security_policy.rs  signature_verification_service.rs  synchronisation.rs  todo.txt
src/database/: authorisation.rs  authorisation_service.rs  authorisation_service_test.rs  authorisation_sync.rs  authorisation_sync_test.rs  authorisation_test.rs  configuration.rs  daily_log.rs  database.rs  database_service.rs  datamodel.rs  deletion.rs  edge.rs  edge_table.rs  event_service.rs  graph_database.rs  inialisation.rs  mod.rs  mutation_query.rs  node.rs  node_full.rs  node_table.rs  query.rs  query_builder.rs  query_test.rs  room.rs  room_node.rs  security_policy.rs  sqlite_database.rs  synch_log.rs  system_entities.rs
src/database/query_language/: data_model.pest  data_model.rs  data_model_parser.rs  data_model_parser_old.rs  data_model_parser_test.rs  deletion.pest  deletion.rs  deletion_parser.rs  mod.rs  mutation.pest  mutation.rs  mutation_parser.rs  parameter.pest  parameter.rs  query.pest  query.rs  query_parser.rs  query_parser_test.rs
src/datalayer/: database.rs  datamodel.rs  mod.rs
src/network/: beacon.rs  beacon_client.rs  beacon_server.rs  endpoint.rs  error.rs  message.rs  mod.rs  multicast.rs  p2p.rs  peer_connection_service.rs  peer_manager.rs  shared_buffers.rs
src/networking/: p2p.rs
src/synchronisation/: authorisation_node.rs  local_peer.rs  mod.rs  node_full.rs  peer.rs  peer_connection_service.rs  peer_inbound_service.rs  peer_outbound_service.rs  peer_service.rs  remote_peer.rs  room_lock.rs  room_locking_service.rs  room_node.rs
test/security/: validate_edge_policy.db  validate_edge_standard.db  validate_node_policy.db  validate_node_policy_group.db  validate_node_standard.db
tests/: discret.rs  mutations.rs  synchronisation.rs
