[package]
name = "discret"
version = "0.1.0"
license = "AGPL"
authors = ["Adrien Salais <adrien.salais@gmail.com>"]
keywords = ["p2p, peer to peer, GraphQl"]
edition = "2021"


[dependencies]
## database 
rusqlite = { version = "0.31.0", features = [
    "bundled-sqlcipher-vendored-openssl",
    "backup",
    "hooks",
    "window",
] }
#rusqlite = { version = "0.31.0", features = ["bundled","backup","vtab","url" ,"blob","chrono","serde_json","hooks", "window"] }


## Serialisation
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.92"
hex = "0.4.3"
base64 = "0.22.0"
pest = "2.7.6"
pest_derive = "2.7.6"

## Crypto
rustls = { version = "0.23.8", default-features = false, features = [
    "ring",
    "std",
] }
rust-argon2 = "2.1.0"
blake3 = "1.3.3"
ed25519-dalek = "2.1.0"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "serde"] }
rcgen = "0.13.1"
rand = "0.8.5"

## Network
quinn = { version = "0.11.1", default-features = false, features = [
    "rustls",
    "ring",
    "runtime-tokio",
] }
futures = "0.3.26"
socket2 = "0.5.1"

## Other
thiserror = "1.0.38"
tokio = { version = "1.36.0", features = ["full"] }
flume = "0.11.0"
lazy_static = "1.4.0"
fallible-iterator = "0.3.0"
chrono = "0.4.23"
lru = "0.12.3"
sysinfo = "0.30.12"
