
[package]
name = "discret"
version = "0.6.0"
license = "AGPL"
authors = ["Adrien Salais <adrien.salais@proton.me>"]
keywords = ["p2p, peer to peer, GraphQl, QUIC"]
edition = "2021"


[dependencies]
## database 
# rusqlite = { version = "0.31.0", features = [
#     "bundled",
#     "backup",
#     "hooks",
#     "window",
# ] }

rusqlite = { version = "0.31.0", features = [
    "bundled-sqlcipher-vendored-openssl",
    "backup",
    "hooks",
    "window",
] }

## Crypto
rustls = { version = "0.23.10", default-features = false, features = [
    "ring",
    "std",
] }
rcgen = "0.13.1"
rust-argon2 = "2.1.0"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["batch"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
rand = "0.8.5"

## Network
quinn = { version = "0.11.2", default-features = false, features = [
    "rustls",
    "ring",
    "runtime-tokio",
] }
socket2 = "0.5.7"

## Serialisation
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.117"
hex = "0.4.3"
base64 = "0.22.1"
pest = "2.7.10"
pest_derive = "2.7.10"

## Other
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
flume = "0.11.0"
lazy_static = "1.4.0"
chrono = "0.4.38"
lru = "0.12.3"
sysinfo = "0.30.12"
